# lunch_calendar

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build_and_deploy.yml  terraform-fmt-check.yml  terraform-lint.yml
deploy/: lambda.tf  main.tf
src/lunch_calendar/: __init__.py
