[project]
name = "lunch-calendar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Giesberg", email = "git@davidgiesberg.net" }
]
dependencies = [
    "fastapi==0.112.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "fastapi[standard]>=0.112.1",
    "ruff>=0.6.1",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lunch_calendar"]
