[project]
name = "lunch-calendar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Giesberg", email = "git@davidgiesberg.net" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
    "pre-commit>=3.8.0",
    "boto3>=1.35.0",
    "rich>=13.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lunch_calendar"]
